[gd_scene load_steps=11 format=3 uid="uid://bngycxbop837e"]

[ext_resource type="Script" path="res://Tree/Tree_0.gd" id="1_0ebas"]
[ext_resource type="Texture2D" uid="uid://dft1f0sqif28r" path="res://Tree/Tree_00.png" id="1_wwp86"]
[ext_resource type="Script" path="res://Components/HurtBox.gd" id="4_qsns3"]
[ext_resource type="Script" path="res://Components/RangedAttackComponent.gd" id="5_ahrj1"]
[ext_resource type="PackedScene" uid="uid://b5c4sb32maivv" path="res://Projectiles/Projectile.tscn" id="5_cxgga"]
[ext_resource type="Script" path="res://Components/TargetingComponent.gd" id="6_616h2"]
[ext_resource type="Script" path="res://Components/HealthComponent.gd" id="7_ikvvx"]
[ext_resource type="PackedScene" uid="uid://cprv0ihrd0r3e" path="res://Components/UIComponents/health_bar_component.tscn" id="8_csxyu"]
[ext_resource type="Script" path="res://Components/StatsComponent.gd" id="9_agma2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_027es"]
radius = 25.2977
height = 102.335

[node name="Tree_0" type="StaticBody2D" groups=["Tree"]]
position = Vector2(640.16, 360.09)
script = ExtResource("1_0ebas")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_wwp86")
metadata/_edit_lock_ = true

[node name="HurtBox" type="Area2D" parent="Sprite2D" node_paths=PackedStringArray("health_component")]
script = ExtResource("4_qsns3")
health_component = NodePath("../../HealthComponent")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HurtBox"]
position = Vector2(0.594727, 11.0002)
shape = SubResource("CapsuleShape2D_027es")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.594727, 11.0002)
shape = SubResource("CapsuleShape2D_027es")
metadata/_edit_lock_ = true

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("9_agma2")
damage = 14
health = 1234

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("7_ikvvx")

[node name="HealthBarComponent" parent="." instance=ExtResource("8_csxyu")]

[node name="Node2D" parent="HealthBarComponent" index="0"]
position = Vector2(643.335, 265.64)

[node name="ProgressBar" parent="HealthBarComponent/Node2D" index="0"]
offset_left = -34.1748
offset_top = 20.4303
offset_right = 28.8252
offset_bottom = 29.4303

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(3.1748, -94.4503)
remote_path = NodePath("../HealthBarComponent/Node2D")
update_rotation = false
update_scale = false

[node name="RangedAttackComponent" type="Node" parent="." node_paths=PackedStringArray("targeting")]
script = ExtResource("5_ahrj1")
targeting = NodePath("Targeting")
projectile = ExtResource("5_cxgga")

[node name="Targeting" type="Node2D" parent="RangedAttackComponent"]
position = Vector2(640.16, 360.09)
script = ExtResource("6_616h2")

[connection signal="dead" from="HealthComponent" to="." method="_on_health_component_dead"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="health_changed" from="HealthComponent" to="HealthBarComponent" method="_on_health_component_health_changed"]
[connection signal="health_setup" from="HealthComponent" to="HealthBarComponent" method="_on_health_component_health_setup"]

[editable path="HealthBarComponent"]
